hphp/hack/test/typecheck/enum_class/access_variant_writeprops2.bad.php.rust_elab.exp
File "access_variant_writeprops2.bad.php", line 4, characters 12-17:
`HH\BuiltinEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
File "access_variant_writeprops2.bad.php", line 9, characters 21-31:
Accessing an enum class constant requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "access_variant_writeprops2.bad.php", line 9, characters 21-31:
  The local (enclosing) context provides the capability set {}
File "access_variant_writeprops2.bad.php", line 10, characters 27-37:
Accessing an enum class constant requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "access_variant_writeprops2.bad.php", line 10, characters 27-37:
  The local (enclosing) context provides the capability set {}
File "access_variant_writeprops2.bad.php", line 11, characters 40-50:
Accessing an enum class constant requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "access_variant_writeprops2.bad.php", line 11, characters 40-50:
  The local (enclosing) context provides the capability set {}
