hphp/hack/test/typecheck/enum_class/access_variant_writeprops2.bad.php
<?hh

class MyClass {}
enum class MyEnum: MyClass {
  MyClass AAA = new MyClass();
}

class C {
  const MyClass X = MyEnum::AAA;
  private MyClass $prop = MyEnum::AAA;
  private static MyClass $staticProp = MyEnum::AAA;
}
